// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DevUILayout tests Snapshot test with Processing disabled 1`] = `
<PageLayout
  PageNav={
    <DevUINav
      pathname="/"
    />
  }
  pageNavOpen={true}
  withHeader={false}
>
  <Page
    className="kogito-consoles-common--PageLayout"
    data-ouia-component-type="page"
    data-ouia-safe={true}
    defaultManagedSidebarIsOpen={true}
    header={<React.Fragment />}
    isBreadcrumbWidthLimited={false}
    isManagedSidebar={false}
    isNotificationDrawerExpanded={false}
    mainContainerId="main-content-page-layout-default-nav"
    mainTabIndex={-1}
    onNotificationDrawerExpand={[Function]}
    onPageResize={[Function]}
    sidebar={
      <PageSidebar
        data-ouia-navigation="true"
        isNavOpen={true}
        nav={
          <DevUINav
            pathname="/"
          />
        }
        theme="dark"
      />
    }
  >
    <div
      className="pf-c-page kogito-consoles-common--PageLayout"
      data-ouia-component-type="page"
      data-ouia-safe={true}
    >
      <PageSidebar
        data-ouia-navigation="true"
        isNavOpen={true}
        nav={
          <DevUINav
            pathname="/"
          />
        }
        theme="dark"
      >
        <div
          aria-hidden={false}
          className="pf-c-page__sidebar pf-m-expanded"
          data-ouia-navigation="true"
          id="page-sidebar"
        >
          <div
            className="pf-c-page__sidebar-body"
          >
            <DevUINav
              pathname="/"
            >
              <Nav
                aria-label="Nav"
                onSelect={[Function]}
                onToggle={[Function]}
                ouiaSafe={true}
                theme="dark"
              >
                <nav
                  aria-label="Nav"
                  className="pf-c-nav"
                  data-ouia-component-id="OUIA-Generated-Nav-2"
                  data-ouia-component-type="PF4/Nav"
                  data-ouia-safe={true}
                >
                  <NavList
                    ariaLeftScroll="Scroll left"
                    ariaRightScroll="Scroll right"
                  >
                    <ul
                      className="pf-c-nav__list"
                      onScroll={[Function]}
                    >
                      <NavItem
                        isActive={false}
                        key="audit-nav"
                      >
                        <li
                          className="pf-c-nav__item"
                          data-ouia-component-id="OUIA-Generated-NavItem-8"
                          data-ouia-component-type="PF4/NavItem"
                          data-ouia-safe={true}
                          onMouseOver={[Function]}
                        >
                          <Link
                            aria-current={null}
                            className="pf-c-nav__link"
                            data-ouia-navigation-name="audit-nav"
                            onClick={[Function]}
                            tabIndex={null}
                            to="/Audit"
                          >
                            <LinkAnchor
                              aria-current={null}
                              className="pf-c-nav__link"
                              data-ouia-navigation-name="audit-nav"
                              href="/Audit"
                              navigate={[Function]}
                              onClick={[Function]}
                              tabIndex={null}
                            >
                              <a
                                aria-current={null}
                                className="pf-c-nav__link"
                                data-ouia-navigation-name="audit-nav"
                                href="/Audit"
                                onClick={[Function]}
                                tabIndex={null}
                              >
                                Audit investigation
                              </a>
                            </LinkAnchor>
                          </Link>
                        </li>
                      </NavItem>
                    </ul>
                  </NavList>
                  <NavExpandable
                    className=""
                    groupId="grp-Monitoring"
                    id=""
                    isActive={false}
                    isExpanded={true}
                    srText="SR Monitoring"
                    title="Monitoring"
                  >
                    <li
                      className="pf-c-nav__item pf-m-expandable pf-m-expanded"
                      data-ouia-component-id="OUIA-Generated-NavExpandable-2"
                      data-ouia-component-type="PF4/NavExpandable"
                      data-ouia-safe={true}
                    >
                      <button
                        aria-expanded={true}
                        className="pf-c-nav__link"
                        id={null}
                        onClick={[Function]}
                        tabIndex={null}
                      >
                        Monitoring
                        <span
                          className="pf-c-nav__toggle"
                        >
                          <span
                            className="pf-c-nav__toggle-icon"
                          >
                            <AngleRightIcon
                              aria-hidden="true"
                              color="currentColor"
                              noVerticalAlign={false}
                              size="sm"
                            >
                              <svg
                                aria-hidden="true"
                                aria-labelledby={null}
                                fill="currentColor"
                                height="1em"
                                role="img"
                                style={
                                  Object {
                                    "verticalAlign": "-0.125em",
                                  }
                                }
                                viewBox="0 0 256 512"
                                width="1em"
                              >
                                <path
                                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                                />
                              </svg>
                            </AngleRightIcon>
                          </span>
                        </span>
                      </button>
                      <section
                        aria-labelledby="pf-1662084607498s8dwr60iu4"
                        className="pf-c-nav__subnav"
                        hidden={null}
                      >
                        <h2
                          className="pf-u-screen-reader"
                          id="pf-1662084607498s8dwr60iu4"
                        >
                          SR Monitoring
                        </h2>
                        <ul
                          className="pf-c-nav__list"
                        >
                          <NavItem
                            isActive={false}
                            key="monitoring-nav"
                          >
                            <li
                              className="pf-c-nav__item"
                              data-ouia-component-id="OUIA-Generated-NavItem-9"
                              data-ouia-component-type="PF4/NavItem"
                              data-ouia-safe={true}
                              onMouseOver={[Function]}
                            >
                              <Link
                                aria-current={null}
                                className="pf-c-nav__link"
                                data-ouia-navigation-name="monitoring-nav"
                                onClick={[Function]}
                                tabIndex={null}
                                to="/Monitoring"
                              >
                                <LinkAnchor
                                  aria-current={null}
                                  className="pf-c-nav__link"
                                  data-ouia-navigation-name="monitoring-nav"
                                  href="/Monitoring"
                                  navigate={[Function]}
                                  onClick={[Function]}
                                  tabIndex={null}
                                >
                                  <a
                                    aria-current={null}
                                    className="pf-c-nav__link"
                                    data-ouia-navigation-name="monitoring-nav"
                                    href="/Monitoring"
                                    onClick={[Function]}
                                    tabIndex={null}
                                  >
                                    Monitoring
                                  </a>
                                </LinkAnchor>
                              </Link>
                            </li>
                          </NavItem>
                          <NavItem
                            isActive={false}
                            key="customDashboard-nav"
                          >
                            <li
                              className="pf-c-nav__item"
                              data-ouia-component-id="OUIA-Generated-NavItem-10"
                              data-ouia-component-type="PF4/NavItem"
                              data-ouia-safe={true}
                              onMouseOver={[Function]}
                            >
                              <Link
                                aria-current={null}
                                className="pf-c-nav__link"
                                data-ouia-navigation-name="customDashboard-nav"
                                onClick={[Function]}
                                tabIndex={null}
                                to="/CustomDashboard"
                              >
                                <LinkAnchor
                                  aria-current={null}
                                  className="pf-c-nav__link"
                                  data-ouia-navigation-name="customDashboard-nav"
                                  href="/CustomDashboard"
                                  navigate={[Function]}
                                  onClick={[Function]}
                                  tabIndex={null}
                                >
                                  <a
                                    aria-current={null}
                                    className="pf-c-nav__link"
                                    data-ouia-navigation-name="customDashboard-nav"
                                    href="/CustomDashboard"
                                    onClick={[Function]}
                                    tabIndex={null}
                                  >
                                    Dashboards
                                  </a>
                                </LinkAnchor>
                              </Link>
                            </li>
                          </NavItem>
                        </ul>
                      </section>
                    </li>
                  </NavExpandable>
                </nav>
              </Nav>
            </DevUINav>
          </div>
        </div>
      </PageSidebar>
      <main
        className="pf-c-page__main"
        id="main-content-page-layout-default-nav"
        tabIndex={-1}
      >
        <MemoryRouter
          initialEntries={
            Array [
              "/",
            ]
          }
          keyLength={0}
        >
          <Router
            history={
              Object {
                "action": "POP",
                "block": [Function],
                "canGo": [Function],
                "createHref": [Function],
                "entries": Array [
                  Object {
                    "hash": "",
                    "pathname": "/",
                    "search": "",
                    "state": undefined,
                  },
                ],
                "go": [Function],
                "goBack": [Function],
                "goForward": [Function],
                "index": 0,
                "length": 1,
                "listen": [Function],
                "location": Object {
                  "hash": "",
                  "pathname": "/",
                  "search": "",
                  "state": undefined,
                },
                "push": [Function],
                "replace": [Function],
              }
            }
          >
            <MockedDevUIRoutes
              navigate="JobsManagement"
              trustyServiceUrl="http://localhost:8081"
            />
          </Router>
        </MemoryRouter>
      </main>
    </div>
  </Page>
</PageLayout>
`;

exports[`DevUILayout tests Snapshot test with Tracing disabled 1`] = `
<PageLayout
  PageNav={
    <DevUINav
      pathname="/"
    />
  }
  pageNavOpen={true}
  withHeader={false}
>
  <Page
    className="kogito-consoles-common--PageLayout"
    data-ouia-component-type="page"
    data-ouia-safe={true}
    defaultManagedSidebarIsOpen={true}
    header={<React.Fragment />}
    isBreadcrumbWidthLimited={false}
    isManagedSidebar={false}
    isNotificationDrawerExpanded={false}
    mainContainerId="main-content-page-layout-default-nav"
    mainTabIndex={-1}
    onNotificationDrawerExpand={[Function]}
    onPageResize={[Function]}
    sidebar={
      <PageSidebar
        data-ouia-navigation="true"
        isNavOpen={true}
        nav={
          <DevUINav
            pathname="/"
          />
        }
        theme="dark"
      />
    }
  >
    <div
      className="pf-c-page kogito-consoles-common--PageLayout"
      data-ouia-component-type="page"
      data-ouia-safe={true}
    >
      <PageSidebar
        data-ouia-navigation="true"
        isNavOpen={true}
        nav={
          <DevUINav
            pathname="/"
          />
        }
        theme="dark"
      >
        <div
          aria-hidden={false}
          className="pf-c-page__sidebar pf-m-expanded"
          data-ouia-navigation="true"
          id="page-sidebar"
        >
          <div
            className="pf-c-page__sidebar-body"
          >
            <DevUINav
              pathname="/"
            >
              <Nav
                aria-label="Nav"
                onSelect={[Function]}
                onToggle={[Function]}
                ouiaSafe={true}
                theme="dark"
              >
                <nav
                  aria-label="Nav"
                  className="pf-c-nav"
                  data-ouia-component-id="OUIA-Generated-Nav-3"
                  data-ouia-component-type="PF4/Nav"
                  data-ouia-safe={true}
                >
                  <NavList
                    ariaLeftScroll="Scroll left"
                    ariaRightScroll="Scroll right"
                  >
                    <ul
                      className="pf-c-nav__list"
                      onScroll={[Function]}
                    >
                      <NavItem
                        isActive={false}
                        key="processes-nav"
                      >
                        <li
                          className="pf-c-nav__item"
                          data-ouia-component-id="OUIA-Generated-NavItem-11"
                          data-ouia-component-type="PF4/NavItem"
                          data-ouia-safe={true}
                          onMouseOver={[Function]}
                        >
                          <Link
                            aria-current={null}
                            className="pf-c-nav__link"
                            data-ouia-navigation-name="processes-nav"
                            onClick={[Function]}
                            tabIndex={null}
                            to="/Processes"
                          >
                            <LinkAnchor
                              aria-current={null}
                              className="pf-c-nav__link"
                              data-ouia-navigation-name="processes-nav"
                              href="/Processes"
                              navigate={[Function]}
                              onClick={[Function]}
                              tabIndex={null}
                            >
                              <a
                                aria-current={null}
                                className="pf-c-nav__link"
                                data-ouia-navigation-name="processes-nav"
                                href="/Processes"
                                onClick={[Function]}
                                tabIndex={null}
                              >
                                Workflows
                              </a>
                            </LinkAnchor>
                          </Link>
                        </li>
                      </NavItem>
                      <NavItem
                        isActive={false}
                        key="jobs-management-nav"
                      >
                        <li
                          className="pf-c-nav__item"
                          data-ouia-component-id="OUIA-Generated-NavItem-12"
                          data-ouia-component-type="PF4/NavItem"
                          data-ouia-safe={true}
                          onMouseOver={[Function]}
                        >
                          <Link
                            aria-current={null}
                            className="pf-c-nav__link"
                            data-ouia-navigation-name="jobs-management-nav"
                            onClick={[Function]}
                            tabIndex={null}
                            to="/JobsManagement"
                          >
                            <LinkAnchor
                              aria-current={null}
                              className="pf-c-nav__link"
                              data-ouia-navigation-name="jobs-management-nav"
                              href="/JobsManagement"
                              navigate={[Function]}
                              onClick={[Function]}
                              tabIndex={null}
                            >
                              <a
                                aria-current={null}
                                className="pf-c-nav__link"
                                data-ouia-navigation-name="jobs-management-nav"
                                href="/JobsManagement"
                                onClick={[Function]}
                                tabIndex={null}
                              >
                                Jobs
                              </a>
                            </LinkAnchor>
                          </Link>
                        </li>
                      </NavItem>
                      <NavItem
                        isActive={false}
                        key="task-inbox-nav"
                      >
                        <li
                          className="pf-c-nav__item"
                          data-ouia-component-id="OUIA-Generated-NavItem-13"
                          data-ouia-component-type="PF4/NavItem"
                          data-ouia-safe={true}
                          onMouseOver={[Function]}
                        >
                          <Link
                            aria-current={null}
                            className="pf-c-nav__link"
                            data-ouia-navigation-name="task-inbox-nav"
                            onClick={[Function]}
                            tabIndex={null}
                            to="/TaskInbox"
                          >
                            <LinkAnchor
                              aria-current={null}
                              className="pf-c-nav__link"
                              data-ouia-navigation-name="task-inbox-nav"
                              href="/TaskInbox"
                              navigate={[Function]}
                              onClick={[Function]}
                              tabIndex={null}
                            >
                              <a
                                aria-current={null}
                                className="pf-c-nav__link"
                                data-ouia-navigation-name="task-inbox-nav"
                                href="/TaskInbox"
                                onClick={[Function]}
                                tabIndex={null}
                              >
                                Tasks
                              </a>
                            </LinkAnchor>
                          </Link>
                        </li>
                      </NavItem>
                      <NavItem
                        isActive={false}
                        key="forms-list-nav"
                      >
                        <li
                          className="pf-c-nav__item"
                          data-ouia-component-id="OUIA-Generated-NavItem-14"
                          data-ouia-component-type="PF4/NavItem"
                          data-ouia-safe={true}
                          onMouseOver={[Function]}
                        >
                          <Link
                            aria-current={null}
                            className="pf-c-nav__link"
                            data-ouia-navigation-name="forms-list-nav"
                            onClick={[Function]}
                            tabIndex={null}
                            to="/Forms"
                          >
                            <LinkAnchor
                              aria-current={null}
                              className="pf-c-nav__link"
                              data-ouia-navigation-name="forms-list-nav"
                              href="/Forms"
                              navigate={[Function]}
                              onClick={[Function]}
                              tabIndex={null}
                            >
                              <a
                                aria-current={null}
                                className="pf-c-nav__link"
                                data-ouia-navigation-name="forms-list-nav"
                                href="/Forms"
                                onClick={[Function]}
                                tabIndex={null}
                              >
                                Forms
                              </a>
                            </LinkAnchor>
                          </Link>
                        </li>
                      </NavItem>
                    </ul>
                  </NavList>
                  <NavExpandable
                    className=""
                    groupId="grp-Monitoring"
                    id=""
                    isActive={false}
                    isExpanded={true}
                    srText="SR Monitoring"
                    title="Monitoring"
                  >
                    <li
                      className="pf-c-nav__item pf-m-expandable pf-m-expanded"
                      data-ouia-component-id="OUIA-Generated-NavExpandable-3"
                      data-ouia-component-type="PF4/NavExpandable"
                      data-ouia-safe={true}
                    >
                      <button
                        aria-expanded={true}
                        className="pf-c-nav__link"
                        id={null}
                        onClick={[Function]}
                        tabIndex={null}
                      >
                        Monitoring
                        <span
                          className="pf-c-nav__toggle"
                        >
                          <span
                            className="pf-c-nav__toggle-icon"
                          >
                            <AngleRightIcon
                              aria-hidden="true"
                              color="currentColor"
                              noVerticalAlign={false}
                              size="sm"
                            >
                              <svg
                                aria-hidden="true"
                                aria-labelledby={null}
                                fill="currentColor"
                                height="1em"
                                role="img"
                                style={
                                  Object {
                                    "verticalAlign": "-0.125em",
                                  }
                                }
                                viewBox="0 0 256 512"
                                width="1em"
                              >
                                <path
                                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                                />
                              </svg>
                            </AngleRightIcon>
                          </span>
                        </span>
                      </button>
                      <section
                        aria-labelledby="pf-16620846075210pp0x9ldxx4"
                        className="pf-c-nav__subnav"
                        hidden={null}
                      >
                        <h2
                          className="pf-u-screen-reader"
                          id="pf-16620846075210pp0x9ldxx4"
                        >
                          SR Monitoring
                        </h2>
                        <ul
                          className="pf-c-nav__list"
                        >
                          <NavItem
                            isActive={false}
                            key="monitoring-nav"
                          >
                            <li
                              className="pf-c-nav__item"
                              data-ouia-component-id="OUIA-Generated-NavItem-15"
                              data-ouia-component-type="PF4/NavItem"
                              data-ouia-safe={true}
                              onMouseOver={[Function]}
                            >
                              <Link
                                aria-current={null}
                                className="pf-c-nav__link"
                                data-ouia-navigation-name="monitoring-nav"
                                onClick={[Function]}
                                tabIndex={null}
                                to="/Monitoring"
                              >
                                <LinkAnchor
                                  aria-current={null}
                                  className="pf-c-nav__link"
                                  data-ouia-navigation-name="monitoring-nav"
                                  href="/Monitoring"
                                  navigate={[Function]}
                                  onClick={[Function]}
                                  tabIndex={null}
                                >
                                  <a
                                    aria-current={null}
                                    className="pf-c-nav__link"
                                    data-ouia-navigation-name="monitoring-nav"
                                    href="/Monitoring"
                                    onClick={[Function]}
                                    tabIndex={null}
                                  >
                                    Monitoring
                                  </a>
                                </LinkAnchor>
                              </Link>
                            </li>
                          </NavItem>
                          <NavItem
                            isActive={false}
                            key="customDashboard-nav"
                          >
                            <li
                              className="pf-c-nav__item"
                              data-ouia-component-id="OUIA-Generated-NavItem-16"
                              data-ouia-component-type="PF4/NavItem"
                              data-ouia-safe={true}
                              onMouseOver={[Function]}
                            >
                              <Link
                                aria-current={null}
                                className="pf-c-nav__link"
                                data-ouia-navigation-name="customDashboard-nav"
                                onClick={[Function]}
                                tabIndex={null}
                                to="/CustomDashboard"
                              >
                                <LinkAnchor
                                  aria-current={null}
                                  className="pf-c-nav__link"
                                  data-ouia-navigation-name="customDashboard-nav"
                                  href="/CustomDashboard"
                                  navigate={[Function]}
                                  onClick={[Function]}
                                  tabIndex={null}
                                >
                                  <a
                                    aria-current={null}
                                    className="pf-c-nav__link"
                                    data-ouia-navigation-name="customDashboard-nav"
                                    href="/CustomDashboard"
                                    onClick={[Function]}
                                    tabIndex={null}
                                  >
                                    Dashboards
                                  </a>
                                </LinkAnchor>
                              </Link>
                            </li>
                          </NavItem>
                        </ul>
                      </section>
                    </li>
                  </NavExpandable>
                </nav>
              </Nav>
            </DevUINav>
          </div>
        </div>
      </PageSidebar>
      <main
        className="pf-c-page__main"
        id="main-content-page-layout-default-nav"
        tabIndex={-1}
      >
        <MemoryRouter
          initialEntries={
            Array [
              "/",
            ]
          }
          keyLength={0}
        >
          <Router
            history={
              Object {
                "action": "POP",
                "block": [Function],
                "canGo": [Function],
                "createHref": [Function],
                "entries": Array [
                  Object {
                    "hash": "",
                    "pathname": "/",
                    "search": "",
                    "state": undefined,
                  },
                ],
                "go": [Function],
                "goBack": [Function],
                "goForward": [Function],
                "index": 0,
                "length": 1,
                "listen": [Function],
                "location": Object {
                  "hash": "",
                  "pathname": "/",
                  "search": "",
                  "state": undefined,
                },
                "push": [Function],
                "replace": [Function],
              }
            }
          >
            <MockedDevUIRoutes
              navigate="JobsManagement"
              trustyServiceUrl="http://localhost:8081"
            />
          </Router>
        </MemoryRouter>
      </main>
    </div>
  </Page>
</PageLayout>
`;

exports[`DevUILayout tests Snapshot test with default props 1`] = `
<PageLayout
  PageNav={
    <DevUINav
      pathname="/"
    />
  }
  pageNavOpen={true}
  withHeader={false}
>
  <Page
    className="kogito-consoles-common--PageLayout"
    data-ouia-component-type="page"
    data-ouia-safe={true}
    defaultManagedSidebarIsOpen={true}
    header={<React.Fragment />}
    isBreadcrumbWidthLimited={false}
    isManagedSidebar={false}
    isNotificationDrawerExpanded={false}
    mainContainerId="main-content-page-layout-default-nav"
    mainTabIndex={-1}
    onNotificationDrawerExpand={[Function]}
    onPageResize={[Function]}
    sidebar={
      <PageSidebar
        data-ouia-navigation="true"
        isNavOpen={true}
        nav={
          <DevUINav
            pathname="/"
          />
        }
        theme="dark"
      />
    }
  >
    <div
      className="pf-c-page kogito-consoles-common--PageLayout"
      data-ouia-component-type="page"
      data-ouia-safe={true}
    >
      <PageSidebar
        data-ouia-navigation="true"
        isNavOpen={true}
        nav={
          <DevUINav
            pathname="/"
          />
        }
        theme="dark"
      >
        <div
          aria-hidden={false}
          className="pf-c-page__sidebar pf-m-expanded"
          data-ouia-navigation="true"
          id="page-sidebar"
        >
          <div
            className="pf-c-page__sidebar-body"
          >
            <DevUINav
              pathname="/"
            >
              <Nav
                aria-label="Nav"
                onSelect={[Function]}
                onToggle={[Function]}
                ouiaSafe={true}
                theme="dark"
              >
                <nav
                  aria-label="Nav"
                  className="pf-c-nav"
                  data-ouia-component-id="OUIA-Generated-Nav-1"
                  data-ouia-component-type="PF4/Nav"
                  data-ouia-safe={true}
                >
                  <NavList
                    ariaLeftScroll="Scroll left"
                    ariaRightScroll="Scroll right"
                  >
                    <ul
                      className="pf-c-nav__list"
                      onScroll={[Function]}
                    >
                      <NavItem
                        isActive={false}
                        key="processes-nav"
                      >
                        <li
                          className="pf-c-nav__item"
                          data-ouia-component-id="OUIA-Generated-NavItem-1"
                          data-ouia-component-type="PF4/NavItem"
                          data-ouia-safe={true}
                          onMouseOver={[Function]}
                        >
                          <Link
                            aria-current={null}
                            className="pf-c-nav__link"
                            data-ouia-navigation-name="processes-nav"
                            onClick={[Function]}
                            tabIndex={null}
                            to="/Processes"
                          >
                            <LinkAnchor
                              aria-current={null}
                              className="pf-c-nav__link"
                              data-ouia-navigation-name="processes-nav"
                              href="/Processes"
                              navigate={[Function]}
                              onClick={[Function]}
                              tabIndex={null}
                            >
                              <a
                                aria-current={null}
                                className="pf-c-nav__link"
                                data-ouia-navigation-name="processes-nav"
                                href="/Processes"
                                onClick={[Function]}
                                tabIndex={null}
                              >
                                Workflows
                              </a>
                            </LinkAnchor>
                          </Link>
                        </li>
                      </NavItem>
                      <NavItem
                        isActive={false}
                        key="jobs-management-nav"
                      >
                        <li
                          className="pf-c-nav__item"
                          data-ouia-component-id="OUIA-Generated-NavItem-2"
                          data-ouia-component-type="PF4/NavItem"
                          data-ouia-safe={true}
                          onMouseOver={[Function]}
                        >
                          <Link
                            aria-current={null}
                            className="pf-c-nav__link"
                            data-ouia-navigation-name="jobs-management-nav"
                            onClick={[Function]}
                            tabIndex={null}
                            to="/JobsManagement"
                          >
                            <LinkAnchor
                              aria-current={null}
                              className="pf-c-nav__link"
                              data-ouia-navigation-name="jobs-management-nav"
                              href="/JobsManagement"
                              navigate={[Function]}
                              onClick={[Function]}
                              tabIndex={null}
                            >
                              <a
                                aria-current={null}
                                className="pf-c-nav__link"
                                data-ouia-navigation-name="jobs-management-nav"
                                href="/JobsManagement"
                                onClick={[Function]}
                                tabIndex={null}
                              >
                                Jobs
                              </a>
                            </LinkAnchor>
                          </Link>
                        </li>
                      </NavItem>
                      <NavItem
                        isActive={false}
                        key="task-inbox-nav"
                      >
                        <li
                          className="pf-c-nav__item"
                          data-ouia-component-id="OUIA-Generated-NavItem-3"
                          data-ouia-component-type="PF4/NavItem"
                          data-ouia-safe={true}
                          onMouseOver={[Function]}
                        >
                          <Link
                            aria-current={null}
                            className="pf-c-nav__link"
                            data-ouia-navigation-name="task-inbox-nav"
                            onClick={[Function]}
                            tabIndex={null}
                            to="/TaskInbox"
                          >
                            <LinkAnchor
                              aria-current={null}
                              className="pf-c-nav__link"
                              data-ouia-navigation-name="task-inbox-nav"
                              href="/TaskInbox"
                              navigate={[Function]}
                              onClick={[Function]}
                              tabIndex={null}
                            >
                              <a
                                aria-current={null}
                                className="pf-c-nav__link"
                                data-ouia-navigation-name="task-inbox-nav"
                                href="/TaskInbox"
                                onClick={[Function]}
                                tabIndex={null}
                              >
                                Tasks
                              </a>
                            </LinkAnchor>
                          </Link>
                        </li>
                      </NavItem>
                      <NavItem
                        isActive={false}
                        key="forms-list-nav"
                      >
                        <li
                          className="pf-c-nav__item"
                          data-ouia-component-id="OUIA-Generated-NavItem-4"
                          data-ouia-component-type="PF4/NavItem"
                          data-ouia-safe={true}
                          onMouseOver={[Function]}
                        >
                          <Link
                            aria-current={null}
                            className="pf-c-nav__link"
                            data-ouia-navigation-name="forms-list-nav"
                            onClick={[Function]}
                            tabIndex={null}
                            to="/Forms"
                          >
                            <LinkAnchor
                              aria-current={null}
                              className="pf-c-nav__link"
                              data-ouia-navigation-name="forms-list-nav"
                              href="/Forms"
                              navigate={[Function]}
                              onClick={[Function]}
                              tabIndex={null}
                            >
                              <a
                                aria-current={null}
                                className="pf-c-nav__link"
                                data-ouia-navigation-name="forms-list-nav"
                                href="/Forms"
                                onClick={[Function]}
                                tabIndex={null}
                              >
                                Forms
                              </a>
                            </LinkAnchor>
                          </Link>
                        </li>
                      </NavItem>
                      <NavItem
                        isActive={false}
                        key="audit-nav"
                      >
                        <li
                          className="pf-c-nav__item"
                          data-ouia-component-id="OUIA-Generated-NavItem-5"
                          data-ouia-component-type="PF4/NavItem"
                          data-ouia-safe={true}
                          onMouseOver={[Function]}
                        >
                          <Link
                            aria-current={null}
                            className="pf-c-nav__link"
                            data-ouia-navigation-name="audit-nav"
                            onClick={[Function]}
                            tabIndex={null}
                            to="/Audit"
                          >
                            <LinkAnchor
                              aria-current={null}
                              className="pf-c-nav__link"
                              data-ouia-navigation-name="audit-nav"
                              href="/Audit"
                              navigate={[Function]}
                              onClick={[Function]}
                              tabIndex={null}
                            >
                              <a
                                aria-current={null}
                                className="pf-c-nav__link"
                                data-ouia-navigation-name="audit-nav"
                                href="/Audit"
                                onClick={[Function]}
                                tabIndex={null}
                              >
                                Audit investigation
                              </a>
                            </LinkAnchor>
                          </Link>
                        </li>
                      </NavItem>
                    </ul>
                  </NavList>
                  <NavExpandable
                    className=""
                    groupId="grp-Monitoring"
                    id=""
                    isActive={false}
                    isExpanded={true}
                    srText="SR Monitoring"
                    title="Monitoring"
                  >
                    <li
                      className="pf-c-nav__item pf-m-expandable pf-m-expanded"
                      data-ouia-component-id="OUIA-Generated-NavExpandable-1"
                      data-ouia-component-type="PF4/NavExpandable"
                      data-ouia-safe={true}
                    >
                      <button
                        aria-expanded={true}
                        className="pf-c-nav__link"
                        id={null}
                        onClick={[Function]}
                        tabIndex={null}
                      >
                        Monitoring
                        <span
                          className="pf-c-nav__toggle"
                        >
                          <span
                            className="pf-c-nav__toggle-icon"
                          >
                            <AngleRightIcon
                              aria-hidden="true"
                              color="currentColor"
                              noVerticalAlign={false}
                              size="sm"
                            >
                              <svg
                                aria-hidden="true"
                                aria-labelledby={null}
                                fill="currentColor"
                                height="1em"
                                role="img"
                                style={
                                  Object {
                                    "verticalAlign": "-0.125em",
                                  }
                                }
                                viewBox="0 0 256 512"
                                width="1em"
                              >
                                <path
                                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                                />
                              </svg>
                            </AngleRightIcon>
                          </span>
                        </span>
                      </button>
                      <section
                        aria-labelledby="pf-1662084607471c1kjcndntoe"
                        className="pf-c-nav__subnav"
                        hidden={null}
                      >
                        <h2
                          className="pf-u-screen-reader"
                          id="pf-1662084607471c1kjcndntoe"
                        >
                          SR Monitoring
                        </h2>
                        <ul
                          className="pf-c-nav__list"
                        >
                          <NavItem
                            isActive={false}
                            key="monitoring-nav"
                          >
                            <li
                              className="pf-c-nav__item"
                              data-ouia-component-id="OUIA-Generated-NavItem-6"
                              data-ouia-component-type="PF4/NavItem"
                              data-ouia-safe={true}
                              onMouseOver={[Function]}
                            >
                              <Link
                                aria-current={null}
                                className="pf-c-nav__link"
                                data-ouia-navigation-name="monitoring-nav"
                                onClick={[Function]}
                                tabIndex={null}
                                to="/Monitoring"
                              >
                                <LinkAnchor
                                  aria-current={null}
                                  className="pf-c-nav__link"
                                  data-ouia-navigation-name="monitoring-nav"
                                  href="/Monitoring"
                                  navigate={[Function]}
                                  onClick={[Function]}
                                  tabIndex={null}
                                >
                                  <a
                                    aria-current={null}
                                    className="pf-c-nav__link"
                                    data-ouia-navigation-name="monitoring-nav"
                                    href="/Monitoring"
                                    onClick={[Function]}
                                    tabIndex={null}
                                  >
                                    Monitoring
                                  </a>
                                </LinkAnchor>
                              </Link>
                            </li>
                          </NavItem>
                          <NavItem
                            isActive={false}
                            key="customDashboard-nav"
                          >
                            <li
                              className="pf-c-nav__item"
                              data-ouia-component-id="OUIA-Generated-NavItem-7"
                              data-ouia-component-type="PF4/NavItem"
                              data-ouia-safe={true}
                              onMouseOver={[Function]}
                            >
                              <Link
                                aria-current={null}
                                className="pf-c-nav__link"
                                data-ouia-navigation-name="customDashboard-nav"
                                onClick={[Function]}
                                tabIndex={null}
                                to="/CustomDashboard"
                              >
                                <LinkAnchor
                                  aria-current={null}
                                  className="pf-c-nav__link"
                                  data-ouia-navigation-name="customDashboard-nav"
                                  href="/CustomDashboard"
                                  navigate={[Function]}
                                  onClick={[Function]}
                                  tabIndex={null}
                                >
                                  <a
                                    aria-current={null}
                                    className="pf-c-nav__link"
                                    data-ouia-navigation-name="customDashboard-nav"
                                    href="/CustomDashboard"
                                    onClick={[Function]}
                                    tabIndex={null}
                                  >
                                    Dashboards
                                  </a>
                                </LinkAnchor>
                              </Link>
                            </li>
                          </NavItem>
                        </ul>
                      </section>
                    </li>
                  </NavExpandable>
                </nav>
              </Nav>
            </DevUINav>
          </div>
        </div>
      </PageSidebar>
      <main
        className="pf-c-page__main"
        id="main-content-page-layout-default-nav"
        tabIndex={-1}
      >
        <MemoryRouter
          initialEntries={
            Array [
              "/",
            ]
          }
          keyLength={0}
        >
          <Router
            history={
              Object {
                "action": "POP",
                "block": [Function],
                "canGo": [Function],
                "createHref": [Function],
                "entries": Array [
                  Object {
                    "hash": "",
                    "pathname": "/",
                    "search": "",
                    "state": undefined,
                  },
                ],
                "go": [Function],
                "goBack": [Function],
                "goForward": [Function],
                "index": 0,
                "length": 1,
                "listen": [Function],
                "location": Object {
                  "hash": "",
                  "pathname": "/",
                  "search": "",
                  "state": undefined,
                },
                "push": [Function],
                "replace": [Function],
              }
            }
          >
            <MockedDevUIRoutes
              navigate="JobsManagement"
              trustyServiceUrl="http://localhost:8081"
            />
          </Router>
        </MemoryRouter>
      </main>
    </div>
  </Page>
</PageLayout>
`;
